--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
         "ajv": "^6.12.5",
         "async-mutex": "^0.2.4",
         "bull": "^3.12.1",
-        "circomlib": "^2.0.5",
+        "circomlib": "git+https://github.com/tornadocash/circomlib.git#c372f14d324d57339c88451834bf2824e73bbdbc",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "fixed-merkle-tree": "^0.7.3",
+        "fixed-merkle-tree": "^0.4.0",
         "ioredis": "^4.14.1",
         "mongodb": "^4.1.1",
-        "node-fetch": "^2.7.0",
-        "snarkjs": "^0.7.5",
+        "node-crypto": "^1.0.0",
+        "node-fetch": "^2.6.0",
+        "snarkjs": "git+https://github.com/tornadocash/snarkjs.git#869181cfaf7526fe8972073d31655493a04326d5",
         "uuid": "^8.3.0",
-        "wasmsnark": "^0.0.10",
-        "web3": "^4.16.0",
-        "web3-core-promievent": "^1.10.3",
-        "web3-utils": "^4.3.3",
+        "web3": "^1.3.0",
+        "web3-core-promievent": "^1.3.0",
+        "web3-utils": "^1.2.2",
+        "websnark": "git+https://github.com/tornadocash/websnark.git#4c0af6a8b65aabea3c09f377f63c44e7a58afa6d",
         "xian-js": "^0.1.9"
     },
     "devDependencies": {
@@ -32,7 +33,7 @@
         "eslint": "^6.6.0",
         "eslint-config-prettier": "^6.12.0",
         "eslint-plugin-prettier": "^3.1.4",
-        "mocha": "^11.1.0",
+        "mocha": "^8.1.3",
         "prettier": "^2.1.2"
     }
 }
